# pg2mcp

./: CLAUDE.md  README.md  demo.py  example_config.yaml  main.py  pyproject.toml  setup_test_db.py  simple_example.py  test_client.py  test_connection.py  test_fastmcp.py  test_introspection.py  test_mcp_client.py  test_server.py
docs/: DESIGN.md  IMPLEMENTORS_GUIDE.md
pg2mcp/: __init__.py  bridge.py  config.py  introspector.py  resources.py  tools.py  types.py
